# cpp_std_20

./: .autotools  .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  README.md  build.sh  cmake.sh  cmake_defaulte.txt  cmakelib.sh  cnew.sh  config.h.in  cppcheck_report  file_list.fmt  format.sh  new.sh  newsrc.sh
archive/: main_001.cpp  main_002.cpp  main_003.cpp  main_004.cpp  main_005.cpp  main_006.cpp  main_007.cpp  main_008.cpp  main_009.cpp  main_010.cpp  main_011.cpp  main_012.cpp  main_013.cpp  main_014.cpp  main_015.cpp  main_016.cpp  main_017.cpp  main_018.cpp  main_019.cpp  main_020.cpp  main_021.cpp  main_022.cpp  main_023.cpp  main_024.cpp  main_025.cpp  main_026.cpp  main_027.cpp  main_028.cpp  main_029.cpp  main_030.cpp  main_031.cpp  main_032.cpp  main_033.cpp  main_034.cpp  main_035.cpp  main_036.cpp  main_037.cpp  main_038.cpp  main_039.cpp  main_040.cpp  (+26 more)
archive/src_/app/: main.cpp
archive/src_0001/app/: main.cpp
archive/src_001/header/: array_swapping.hpp  main.hpp
archive/src_002/app/: main.cpp
archive/src_003/app/: main.cpp
archive/src_006/app/: main.cpp
archive/src_008/app/: main.cpp
archive/src_011/app/: main.cpp
archive/src_012/app/: main.cpp
archive/src_015/app/: main.cpp
archive/src_016/app/: main.cpp
archive/src_019/app/: main.cpp
archive/src_024/app/: main.cpp
archive/src_025/app/: main.cpp
archive/src_027/app/: main.cpp
archive/src_030/app/: main.cpp
archive/src_032/app/: main.cpp
archive/src_034/app/: main.cpp
archive/src_035/app/: main.cpp
archive/src_035/header/: main.hpp
archive/src_036/app/: main.cpp
archive/src_037/app/: main.cpp
archive/src_038/app/: main.cpp
archive/src_039/app/: main.cpp
archive/src_040/app/: main.cpp
archive/src_043/app/: main.cpp
archive/src_044/app/: main.cpp
archive/src_045/app/: main.cpp
archive/src_046/app/: main.cpp
archive/src_049/app/: main.cpp
archive/src_051/app/: main.cpp
archive/src_054/app/: main.cpp
archive/src_056/app/: main.cpp
archive/src_057/app/: main.cpp
archive/src_058/app/: main.cpp
archive/src_058/header/: main.hpp
archive/src_059/app/: main.cpp
archive/src_064/app/: main.cpp
archive/src_065/app/: main.cpp
archive/src_066/app/: main.cpp
archive/src_068/app/: main.cpp
archive/src_069/app/: main.cpp
archive/src_072/app/: main.cpp
archive/src_077/app/: main.cpp
archive/src_079/app/: main.cpp
archive/src_080/app/: main.cpp
archive/src_081/app/: main.cpp
archive/src_083/app/: main.cpp
archive/src_085/app/: main.cpp
archive/src_086/app/: main.cpp
archive/src_086/header/: main.hpp
archive/src_087/app/: main.cpp
archive/src_090/app/: main.cpp
archive/src_091/app/: main.cpp
archive/src_095/app/: main.cpp
archive/src_097/app/: main.cpp
archive/src_098/app/: main.cpp
archive/src_100/app/: main.cpp
archive/src_101/app/: main.cpp
archive/src_102/app/: main.cpp
archive/src_103/app/: main.cpp
archive/src_104/app/: main.cpp
archive/src_106/app/: main.cpp
archive/src_108/app/: main.cpp
archive/src_109/app/: main.cpp
archive/src_109/header/: compare.cpp  compare.hpp
archive/src_111/header/: utillib.hpp
archive/src_113/app/: main.cpp
archive/src_113/header/: utillib.cpp  utillib.hpp
archive/src_115/app/: main.cpp
archive/src_118/app/: main.cpp
archive/src_119/app/: main.cpp
archive/src_122/app/: main.cpp
archive/src_124/app/: main.cpp
archive/src_125/app/: main.cpp
archive/src_126/app/: main.cpp
archive/src_127/app/: main.cpp
archive/src_129/app/: main.cpp
archive/src_130/app/: main.cpp
archive/src_131/app/: main.cpp
archive/src_132/app/: main.cpp
archive/src_133/app/: main.cpp
archive/src_134/app/: main.cpp
archive/src_135/app/: main.cpp
archive/src_137/header/: utillib.hpp
archive/src_139/app/: main.cpp
archive/src_139/header/: person.cpp  person.hpp
archive/src_141/app/: main.cpp
archive/src_142/app/: main.cpp
archive/src_145/app/: main.cpp
archive/src_147/app/: main.cpp
archive/src_148/app/: main.cpp
archive/src_149/app/: main.cpp
archive/src_150/app/: main.cpp
archive/src_152/app/: main.cpp
archive/src_154/app/: main.cpp
archive/src_156/app/: main.cpp
archive/src_158/app/: main.cpp
archive/src_160/app/: main.cpp
archive/src_160/header/: utillib.hpp
archive/src_161/app/: main.cpp
archive/src_162/app/: main.cpp
archive/src_163/app/: main.cpp
archive/src_164/app/: main.cpp
archive/src_164/header/: overloading.cpp  overloading.hpp
archive/src_165/app/: main.cpp
archive/src_165/header/: overloading.cpp  overloading.hpp
archive/src_166/app/: main.cpp
archive/src_167/app/: main.cpp
archive/src_170/app/: main.cpp
archive/src_171/app/: main.cpp
archive/src_172/app/: main_001.cpp
archive/src_172/header/: utillib.hpp
archive/src_173/app/: main.cpp
archive/src_178/app/: main.cpp
archive/src_179/app/: main.cpp
archive/src_181/app/: main.cpp
archive/src_182/app/: main.cpp
archive/src_182/header/: utillib.hpp
archive/src_183/app/: main.cpp
archive/src_186/app/: main.cpp
archive/src_187/app/: main.cpp
archive/src_193/app/: main.cpp
archive/src_194/app/: main.cpp
archive/src_195/app/: main.cpp
archive/src_196/app/: main.cpp
archive/src_198/app/: main.cpp
archive/src_200/app/: main.cpp
archive/src_202/app/: main.cpp
archive/src_204/app/: main.cpp
archive/src_205/app/: main.cpp  main.hpp
archive/src_205/header/: cpptrain.cpp  utillib.hpp
archive/src_207/app/: main.cpp
archive/src_207/header/: testmodule.cpp  testmodule.hpp
archive/src_208/app/: main.cpp
archive/src_210/app/: main.cpp  main.hpp
archive/src_211/app/: main.cpp
sample/: main.cpp  main_001.cpp  main_002.cpp  raphael.cpp  testmodule.cpp  testmodule.hpp
sample/cylinder/: testmodule.cpp
sample/person/: testmodule.cpp  testmodule.hpp
src/app/: main.cpp  main.hpp  main_001.cpp  raphael.cpp  raphael.hpp  samuel.cpp  samuel.hpp  some_other.hpp  util2.cpp
src/header/: cpptrain.cpp  cpptrain.hpp  main.hpp  testmodule.cpp  testmodule.hpp  utillib.cpp  utillib.hpp
src/util/: util.cpp  util.hpp
(+513 files in other folders)
